# FMI-Semester-7

./: .gitignore  README.md
C++ Examples/FakeFunctionAndGTest/: CMakeLists.txt  main.cpp  test.cc
C++ Examples/LambdaTests/: CMakeLists.txt  LambdaTests.cpp
C++ Examples/Sample-Test1/: Sample-Test1.sln  Sample-Test1.vcxproj  pch.cpp  pch.h  test.cpp
C++ Examples/TemplatesCastingAndMore/: CMakeLists.txt  main.cpp
Graphics/: Circle.m  LineB.m  LineBresenham.m  homework_4.m  Отсичане Z1.docx
Graphics/Bresenham/: CMakeLists.txt  graphics.h  main.cpp
Graphics/Homework 3/: homework.m  tema1_round.m  tema3.m  tema3_draw.m  Запълване на области Z3.docx
Graphics/Homework 5/: changeNode.m  drawCurve.m  interpolationOverhauser.m  Приближаване на криви линии в равнината Z4.docx
Rust/: Cargo.toml
Rust/Anonymus_Functions_Read_Write_Networking/: Cargo.toml  log.txt
Rust/Ex1/: Cargo.toml
Rust/Ex5/: Cargo.toml
Rust/Exr1/: Cargo.toml
Rust/Exr2/: Cargo.toml
Rust/Exr3/: Cargo.toml
Rust/Exr4/: Cargo.toml
Rust/Exr5/: Cargo.toml
Rust/Exr6/: Cargo.toml
Rust/Exr7/: Cargo.toml  deep_quotes.txt
Rust/Exr8/: Cargo.toml
Rust/Exr9/: Cargo.toml
Rust/Factoriel/: Cargo.toml
Rust/Homework_DNA/: Cargo.toml
Rust/IteratorMatrices/: Cargo.toml
Rust/RandomNumberGuess/: Cargo.toml
Rust/async_web_server/: hello.html
Rust/src/: main.rs
Wolfram/: Euiler.nb  ExrRocket.nb  Implicit and Explicit Euiler.lnk  TrainingWithRunge.nb  Upr1and2.nb  preparation.nb  upr3.nb  upr4.nb  upr5.nb  upr6.nb  Адамс Башфорт.lnk  Разлики Напред, Назад, Централна.lnk  Рунге Кута.lnk
(+57 files in other folders)
