# CMakeList.txt : CMake project for Bresenham, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Bresenham")

# Add source to this project's executable.
add_executable (Bresenham
"main.cpp"
"graphics.h")

# TODO: Add tests and install targets if needed.
